[package]
name = "libbpf-examples"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/gmarler/libbpf-examples"

[workspace]
#members = [
#  "munmap"
#]

[workspace.dependencies]
libbpf-rs = { version = "0.26.0-beta.1", features = ["static"] }
nix = { version = "0.32.1" }
libbpf-cargo = { version = "0.26.0-beta.1" }
libbpf-sys = "1.6.1"

[dependencies]
plain = "0.2.3"
clap = { version = "4.5.45", features = ["derive", "string"] }

[build-dependencies]
libbpf-cargo = { workspace = true }

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "driver"
path = "src/cli/main.rs"
